--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hasnain Crypto Signal Bot</title>
+    <title>Hasnain Crypto Signal Bot</title> <!--This is a comment. Comments are not displayed in the browser-->
   </head>
   <body>
     <div id="root"></div>
